[tool.poetry]
name = "login"
version = "0.1.0"
description = ""
authors = ["Ricardo-Jackson-Ferrari <ricjferrari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^1.4.44"
pymysql = "^1.0.2"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
isort = "^5.10.1"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
